; ModuleID = '/home/carl/AnghaBench/linux/fs/orangefs/extr_orangefs-cache.c_op_cache_initialize.c'
source_filename = "/home/carl/AnghaBench/linux/fs/orangefs/extr_orangefs-cache.c_op_cache_initialize.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [18 x i8] c"orangefs_op_cache\00", align 1
@ORANGEFS_CACHE_CREATE_FLAGS = common dso_local global i32 0, align 4
@op_cache = common dso_local global i32 0, align 4
@.str.1 = private unnamed_addr constant [33 x i8] c"Cannot create orangefs_op_cache\0A\00", align 1
@ENOMEM = common dso_local global i32 0, align 4
@next_tag_value_lock = common dso_local global i32 0, align 4
@next_tag_value = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @op_cache_initialize() #0 {
  %1 = alloca i32, align 4
  %2 = load i32, i32* @ORANGEFS_CACHE_CREATE_FLAGS, align 4
  %3 = call i32 @kmem_cache_create(i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str, i64 0, i64 0), i32 4, i32 0, i32 %2, i32* null)
  store i32 %3, i32* @op_cache, align 4
  %4 = load i32, i32* @op_cache, align 4
  %5 = icmp ne i32 %4, 0
  br i1 %5, label %10, label %6

6:                                                ; preds = %0
  %7 = call i32 @gossip_err(i8* getelementptr inbounds ([33 x i8], [33 x i8]* @.str.1, i64 0, i64 0))
  %8 = load i32, i32* @ENOMEM, align 4
  %9 = sub nsw i32 0, %8
  store i32 %9, i32* %1, align 4
  br label %13

10:                                               ; preds = %0
  %11 = call i32 @spin_lock(i32* @next_tag_value_lock)
  store i32 100, i32* @next_tag_value, align 4
  %12 = call i32 @spin_unlock(i32* @next_tag_value_lock)
  store i32 0, i32* %1, align 4
  br label %13

13:                                               ; preds = %10, %6
  %14 = load i32, i32* %1, align 4
  ret i32 %14
}

declare dso_local i32 @kmem_cache_create(i8*, i32, i32, i32, i32*) #1

declare dso_local i32 @gossip_err(i8*) #1

declare dso_local i32 @spin_lock(i32*) #1

declare dso_local i32 @spin_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
